# cocktails

./: README.md
src/: Cocktail.sln
src/CMake-SimpleTest/cuda_cpp_std_test/: CMakeLists.txt  CMakeSettings.json  main.cc  test.cc  test.cu  test.cuh
src/CPP-nlohmann-JsonTest/: CPP-nlohmann-JsonTest.sln
src/CPP-nlohmann-JsonTest/Json-ArrayTest/: Json-ArrayTest.cpp  Json-ArrayTest.vcxproj  Json-ArrayTest.vcxproj.filters
src/CPP-nlohmann-JsonTest/Json-ParseTest/: Json-ParseTest.cpp  Json-ParseTest.vcxproj  Json-ParseTest.vcxproj.filters
src/CPP-nlohmann-JsonTest/nlohmann/: Readme.md
src/CSharp/: Cocktail_CSharp.sln
src/CSharp/ETL_Splitter/: Program.cs  (+7 more)
src/CSharp_Net8/: CSharpNet8Test.sln
src/CSharp_NetCore6/: CSharp_NetCore6.sln
src/Cpp/: Cocktail_CPP.sln
src/Cpp-Crypto/: Cpp-CryptoTest.sln
src/Cpp-DeviceAndSetupAPI/: Cpp-DeviceAndSetupAPI.sln
src/Cpp-Exception/: Cpp-Exception.sln
src/Cpp-MiscTest/: Cpp-MiscTest.sln
src/Cpp-STL/: Cpp-STL.sln
src/Cpp-Storage/: CPP-StorageTest.sln
src/Cpp-Win32Mechanism/: Cpp-Win32Mechanism.sln
src/Cpp-Win32Network/: Cpp-Win32Network.sln
src/Cpp-Win32Service/: Cpp-Win32Service.sln
src/Cpp-WinATL/: Cpp-WinATL-Test.sln
src/CppTempTest/: CppTempTest.sln
src/ListPhysicalDiskPartitions/: ListPhysicalDiskPartitions.cpp  ListPhysicalDiskPartitions.vcxproj  ListPhysicalDiskPartitions.vcxproj.filters
src/PowerShell/: ReadmeFirst.txt
src/QueryDeviceBDF/: NVMe.cpp  NVMe.h  QueryDeviceBDF.cpp  QueryDeviceBDF.vcxproj  QueryDeviceBDF.vcxproj.filters  Utils.cpp  Utils.h
src/golang/: README.txt  test.cpp  test.h
(+684 files in other folders)
